fix layout issues in projects and IS page

--- a/Immigrant_Stories.css
+++ b/Immigrant_Stories.css
@@ -105,6 +105,17 @@ div{
 h1{
     font-size: 7em;
     color: black;
-    text-transform: capitalize;
+    text-transform: uppercase;
     text-align: center;
+}
+
+@media only screen and (max-width: 750px){
+    h1{
+        font-size: 4em;
+        color: white;
+    }
+    body{
+        background: linear-gradient(to top, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
+        overflow: hidden;
+    }
 }
