--- a/index.css
+++ b/index.css
@@ -23,6 +23,14 @@ body{
     }
 }
 
+@media only screen and (min-width: 750px) and (orientation: landscape) and (max-width: 1200px) {
+    body{
+        overflow: scroll;
+        background-size: cover;
+    }
+    }
+
+
 nav{
     width: 100%;
     background-color: black;
@@ -126,6 +134,12 @@ nav ul li a:hover{
 @media only screen and (max-width: 460px){
     .info{
         width: 100%;
+    }
+}
+
+@media only screen and (min-width: 750px) and (orientation: landscape){
+    .info{
+        transform: translateY(0%);
     }
 }
 
