--- a/projects.css
+++ b/projects.css
@@ -13,6 +13,13 @@ body, html{
     overflow-x: hidden;
 }
 
+@media only screen and (min-width: 750px) and (max-width: 1200px) and (orientation: landscape){
+    body{
+        width: 100vw;
+    }
+}
+
+
 nav img{
     width: 3em;
     margin-left: 1em;
@@ -112,13 +119,26 @@ nav ul li a:hover{
     width: 100vw;
 }
 
+@media only screen and (min-width: 750px) and (max-width: 1200px) and (orientation: landscape){
+    .flex_container{
+        padding: 2em 1em;
+        width: 100vw;
+    }
+}
+
 .flex_container div{
     margin: 2em auto;
     width: 70em;
     height: 30em;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (min-width: 750px) and (max-width: 1200px) and (orientation: landscape){
+.flex_container div{
+    width: 100%;
+}
+}
+
+@media only screen and (max-width: 750px) {
     .flex_container div{
         width: 100%;
         background-size: 100% 100%;
